[gd_scene load_steps=3 format=3 uid="uid://d11nep0qfx3xu"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_eji1r"]
[ext_resource type="PackedScene" uid="uid://c7fy6vj4kxy1u" path="res://scenes/inventory.tscn" id="2_ca7nl"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_eji1r")

[node name="inventory" parent="." instance=ExtResource("2_ca7nl")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4

[node name="battlemapUI" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -125.0
offset_right = 1153.0
grow_vertical = 0
color = Color(0.647059, 0.427451, 0.290196, 0.788235)

[node name="aim" type="Button" parent="battlemapUI"]
layout_mode = 0
offset_left = 644.0
offset_top = 38.0
offset_right = 715.0
offset_bottom = 94.0
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = false
text = "Aim"

[node name="geomap" type="Button" parent="battlemapUI"]
layout_mode = 0
offset_left = 1036.0
offset_top = 25.0
offset_right = 1141.0
offset_bottom = 100.0
focus_mode = 0
text = "To the road"

[node name="Fire" type="Button" parent="battlemapUI"]
layout_mode = 0
offset_left = 735.0
offset_top = 38.0
offset_right = 806.0
offset_bottom = 94.0
focus_mode = 0
mouse_filter = 1
text = "Fire/'1'"

[node name="inventory_button" type="Button" parent="battlemapUI"]
layout_mode = 0
offset_left = 111.0
offset_top = 2.0
offset_right = 225.0
offset_bottom = 34.0
focus_mode = 0
text = "inventory"

[node name="weapontoggle" type="Button" parent="battlemapUI"]
layout_mode = 0
offset_left = 350.0
offset_top = 23.0
offset_right = 380.0
offset_bottom = 38.0
focus_mode = 0
text = "weapon"

[node name="mapgeoUI" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_right = 176.0
offset_bottom = 324.0
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0.647059, 0.427451, 0.290196, 0.788235)

[node name="turn" type="Button" parent="mapgeoUI"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 416.0
offset_top = -16.0
offset_right = 453.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2

[node name="move" type="Button" parent="mapgeoUI"]
layout_mode = 0
offset_left = 38.0
offset_top = 24.0
offset_right = 140.0
offset_bottom = 83.0
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = false
text = "move"

[node name="camp" type="Button" parent="mapgeoUI"]
layout_mode = 0
offset_left = 37.0
offset_top = 102.0
offset_right = 139.0
offset_bottom = 162.0
focus_mode = 0
text = "camp
"

[node name="food" type="RichTextLabel" parent="mapgeoUI"]
layout_mode = 0
offset_left = 71.0
offset_top = 171.0
offset_right = 174.0
offset_bottom = 194.0

[node name="resourcelabel" type="RichTextLabel" parent="mapgeoUI"]
layout_mode = 0
offset_top = 172.0
offset_right = 103.0
offset_bottom = 281.0
text = "Food:
wood:"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="item_dropped" from="inventory" to="." method="_on_inventory_item_dropped"]
[connection signal="mouse_entered" from="battlemapUI" to="." method="_on_battlemap_ui_mouse_entered"]
[connection signal="mouse_exited" from="battlemapUI" to="." method="_on_battlemap_ui_mouse_exited"]
[connection signal="button_down" from="battlemapUI/aim" to="." method="_on_aim_button_down"]
[connection signal="button_down" from="battlemapUI/geomap" to="." method="_on_geomap_button_down"]
[connection signal="button_down" from="battlemapUI/Fire" to="." method="_on_fire_button_down"]
[connection signal="button_down" from="battlemapUI/inventory_button" to="." method="_on_inventory_button_button_down"]
[connection signal="button_down" from="battlemapUI/weapontoggle" to="." method="_on_weapontoggle_button_down"]
[connection signal="mouse_entered" from="mapgeoUI" to="." method="_on_battlemap_ui_mouse_entered"]
[connection signal="mouse_exited" from="mapgeoUI" to="." method="_on_battlemap_ui_mouse_exited"]
[connection signal="pressed" from="mapgeoUI/turn" to="." method="_on_button_pressed"]
[connection signal="button_down" from="mapgeoUI/move" to="." method="_on_move_button_down"]
[connection signal="button_down" from="mapgeoUI/camp" to="." method="_on_camp_button_down"]
